[gd_scene load_steps=21 format=2]

[ext_resource path="res://test/shapes/manual.gd" type="Script" id=1]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/corner.gd" type="Script" id=2]
[ext_resource path="res://core/camera/free_camera.gd" type="Script" id=3]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/square_corner.gd" type="Script" id=4]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/cube.gd" type="Script" id=5]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/edge.gd" type="Script" id=6]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/inverse_corner.gd" type="Script" id=7]
[ext_resource path="res://plugins/chassis_blocks/variant/no_dup/inverse_square_corner.gd" type="Script" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends DirectionalLight


var rot_x = PI / 4 * 3
var rot_y = -PI / 4


func _process(delta):
	if Input.is_key_pressed(KEY_UP):
		rot_y += delta
	if Input.is_key_pressed(KEY_DOWN):
		rot_y -= delta
	if Input.is_key_pressed(KEY_LEFT):
		rot_x -= delta
	if Input.is_key_pressed(KEY_RIGHT):
		rot_x += delta
	transform.basis = Basis.IDENTITY.rotated(Vector3.UP, rot_x) * \\
			Basis.IDENTITY.rotated(Vector3.RIGHT, rot_y)
"

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="GDScript" id=3]
script/source = "extends ImmediateGeometry

func _ready():
	clear()
	begin(Mesh.PRIMITIVE_LINES)
	set_color(Color.yellow)
	add_vertex(Vector3.ZERO)
	add_vertex(Vector3.BACK * 2)
	end()
"

[sub_resource type="SpatialMaterial" id=4]
flags_disable_ambient_light = true

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="GDScript" id=6]
script/source = "extends ImmediateGeometry


func _ready():
	clear()
	begin(Mesh.PRIMITIVE_LINES)
	set_color(Color.red)
	add_vertex(Vector3.ZERO)
	add_vertex(Vector3.RIGHT)
	end()
	begin(Mesh.PRIMITIVE_LINES)
	set_color(Color.green)
	add_vertex(Vector3.ZERO)
	add_vertex(Vector3.UP)
	end()
	begin(Mesh.PRIMITIVE_LINES)
	set_color(Color.blue)
	add_vertex(Vector3.ZERO)
	add_vertex(Vector3.FORWARD)
	end()
	begin(Mesh.PRIMITIVE_LINES)
	set_color(Color.white)
	add_vertex(Vector3.ZERO)
	add_vertex(Vector3.ONE.normalized())
	end()
"

[sub_resource type="InputEventKey" id=7]
scancode = 16777349

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 16777347

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="GDScript" id=11]
script/source = "extends LineEdit


func _input(event):
	if event is InputEventMouseButton and not get_global_rect().has_point(event.position):
		release_focus()
"

[sub_resource type="CubeMesh" id=12]

[node name="Manual" type="Node"]
script = ExtResource( 1 )
segments = 2
generator_names = [ "corner", "square_corner", "cube", "edge", "inverse_corner", "inverse_square_corner" ]
generator_paths = [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
script = SubResource( 1 )

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="DirectionalLight"]
material_override = SubResource( 2 )
script = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.36516, 5.66657 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 4 )

[node name="MirrorInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0 )
material_override = SubResource( 4 )

[node name="Axises" type="ImmediateGeometry" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
material_override = SubResource( 5 )
script = SubResource( 6 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextVariant" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 5.0
margin_right = 148.0
margin_bottom = 25.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 8 )
text = "Next variant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousVariant" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 25.0
margin_right = 148.0
margin_bottom = 45.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 10 )
text = "Previous Variant"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VariantIndex" type="Label" parent="UI"]
margin_left = 153.498
margin_top = 5.87627
margin_right = 187.498
margin_bottom = 23.8763
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseSegments" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 130.5
margin_right = 148.0
margin_bottom = 150.5
focus_mode = 0
enabled_focus_mode = 0
text = "Increase Segments"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseSegments" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 150.5
margin_right = 148.0
margin_bottom = 170.5
focus_mode = 0
enabled_focus_mode = 0
text = "Decrease Segments"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Segments" type="Label" parent="UI"]
margin_left = 161.507
margin_top = 134.021
margin_right = 195.507
margin_bottom = 152.021
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextMesh" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 244.922
margin_right = 148.0
margin_bottom = 264.922
focus_mode = 0
enabled_focus_mode = 0
text = "Next Mesh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousMesh" type="Button" parent="UI"]
margin_left = 4.0
margin_top = 264.922
margin_right = 148.0
margin_bottom = 284.922
focus_mode = 0
enabled_focus_mode = 0
text = "Previous Mesh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshName" type="Label" parent="UI"]
margin_left = 189.54
margin_top = 252.963
margin_right = 320.54
margin_bottom = 271.963
text = "Blah"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedBlocks" type="VBoxContainer" parent="UI"]
margin_left = 49.5745
margin_top = 336.979
margin_right = 203.575
margin_bottom = 370.979
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationOffset" type="VSlider" parent="Save"]
margin_left = -328.031
margin_top = 25.0
margin_right = -312.031
margin_bottom = 285.0
focus_mode = 0
max_value = 23.0
tick_count = 23
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateMirrorMesh" type="CheckButton" parent="Save"]
anchor_top = 0.0198425
anchor_bottom = 0.0198425
margin_left = -276.5
margin_top = 100.494
margin_right = -102.5
margin_bottom = 140.494
focus_mode = 0
enabled_focus_mode = 0
text = "Mirror Mesh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MirrorRotationOffset" type="VSlider" parent="Save"]
margin_left = -62.3082
margin_top = 25.0
margin_right = -46.3082
margin_bottom = 285.0
focus_mode = 0
max_value = 3.0
tick_count = 4
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Save" type="Button" parent="Save"]
margin_left = -276.5
margin_top = 252.963
margin_right = -170.5
margin_bottom = 272.963
focus_mode = 0
enabled_focus_mode = 0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Save"]
margin_left = -203.623
margin_top = 180.713
margin_right = -97.6228
margin_bottom = 200.713
focus_mode = 0
enabled_focus_mode = 0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="Save"]
margin_left = -274.623
margin_top = 436.301
margin_right = -168.623
margin_bottom = 456.301
focus_mode = 0
enabled_focus_mode = 0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveState" type="Label" parent="Save"]
margin_left = -274.623
margin_top = 186.713
margin_right = -234.623
margin_bottom = 200.713
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockName" type="LineEdit" parent="Save"]
margin_left = -276.0
margin_top = 45.0
margin_right = -91.0
margin_bottom = 75.0
focus_mode = 1
placeholder_text = "Block Name"
caret_blink = true
script = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )
mesh = SubResource( 12 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, -3, 0 )
mesh = SubResource( 12 )
material/0 = null
[connection signal="pressed" from="UI/NextVariant" to="." method="_on_NextVariant_pressed"]
[connection signal="pressed" from="UI/PreviousVariant" to="." method="_on_PreviousVariant_pressed"]
[connection signal="pressed" from="UI/IncreaseSegments" to="." method="_on_IncreaseSegments_pressed"]
[connection signal="pressed" from="UI/DecreaseSegments" to="." method="_on_DecreaseSegments_pressed"]
[connection signal="pressed" from="UI/NextMesh" to="." method="_on_NextMesh_pressed"]
[connection signal="pressed" from="UI/PreviousMesh" to="." method="_on_PreviousMesh_pressed"]
[connection signal="value_changed" from="Save/RotationOffset" to="." method="_on_RotationOffset_value_changed"]
[connection signal="toggled" from="Save/GenerateMirrorMesh" to="." method="_on_GenerateMirrorMesh_toggled"]
[connection signal="value_changed" from="Save/MirrorRotationOffset" to="." method="_on_MirrorRotationOffset_value_changed"]
[connection signal="pressed" from="Save/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Save/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Save/Delete" to="." method="_on_Delete_pressed"]
[connection signal="focus_entered" from="Save/BlockName" to="." method="_on_BlockName_focus_entered"]
[connection signal="focus_exited" from="Save/BlockName" to="." method="_on_BlockName_focus_exited"]
[connection signal="text_changed" from="Save/BlockName" to="." method="_on_BlockName_text_changed"]
